<?xml version="1.0"?>
<package format="2">
  <name>goodsalm</name>
  <version>0.0.0</version>
  <description>The goodsalm package</description>

  <maintainer email="goslam@todo.todo">goslam</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>opencv</depend>
  <depend>eigen</depend>
  
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
 
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
 

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
